[metadata]
name = codeanswer
version = 0.0.1
description =
license = BSD-3-Clause

[options]
python_requires = >=3.9
packages = code_answer
install_requires =
    requests >= 2.27.1
    lxml >= 4.8.0

[options.entry_points]
console_scripts =
    answer = code_answer.answer:command_line_runner

[flake8]
max-line-length = 88

[mypy]
files = code_answer

[mypy-lxml.*]
ignore_missing_imports = True
